--- a/app/views/template/add.jade
+++ b/app/views/template/add.jade
@@ -48,8 +48,16 @@ block content
 
                 div.form-group
                     label.control-label.col-lg-2 Supported browsers
-                    div.col-lg-6
-                        input.form-control(type="text", name="browsers", placeholder="IE 8+, Opera, Firefox, Chrome, Safari")
+                    div.col-lg-8
+                        div.btn-group
+                            button.btn.btn-default.browserButton(type="button", value="IE 8") IE 8
+                            button.btn.btn-default.browserButton(type="button", value="IE 9") IE 9
+                            button.btn.btn-default.browserButton(type="button", value="IE 10") IE 10
+                            button.btn.btn-default.browserButton(type="button", value="Chrome") Chrome
+                            button.btn.btn-default.browserButton(type="button", value="Firefox") Firefox
+                            button.btn.btn-default.browserButton(type="button", value="Safari") Safari
+                            button.btn.btn-default.browserButton(type="button", value="Opera") Opera
+                        input(type="hidden", name="browsers")
 
                 div.form-group
                     label.control-label.col-lg-2 High resolution
@@ -231,8 +239,15 @@ block footerScript
                 $('#uploadedFiles').find('tr').each(function() {
                     uploadedFiles.push($(this).data('file'));
                 });
-
                 $('input[name="uploaded_files"]').val(JSON.stringify(uploadedFiles));
+
+                // Supported browsers
+                var browsers = [];
+                $('.browserButton.active').each(function() {
+                    browsers.push($(this).val());
+                });
+                $('input[name="browsers"]').val(browsers.join(','));
+
                 $(this).parent('form').submit();
             });
 
@@ -254,6 +269,15 @@ block footerScript
                         })
                         .end()
                     .modal('show');
+            });
+
+            // Update supported browsers option
+            $('.browserButton').on('click', function() {
+                if ($(this).hasClass('active')) {
+                    $(this).removeClass('active').find('i').remove();
+                } else {
+                    $(this).addClass('active').prepend($('<i/>').addClass('fa fa-check'));
+                }
             });
 
             // Update high resolution option
