Add link to adding new template to the editing template page

--- a/app/views/template/edit.jade
+++ b/app/views/template/edit.jade
@@ -9,6 +9,11 @@ block content
             a(href="/admin/template") Templates
             |  / Edit template
 
+            span.pull-right
+                a.btn.btn-link(href="/admin/template/add")
+                    i.fa.fa-plus
+                        | &nbsp;Add new template
+
     include ../partial/flash
 
     ul.nav.nav-tabs
