Implement sign in/out for Amember account

--- a/app/views/layouts/backend.jade
+++ b/app/views/layouts/backend.jade
@@ -46,7 +46,7 @@ html
                                     li
                                         a(href="/admin/password") Change password
                                     li
-                                        a(href="/signout") Sign out
+                                        a(href="/admin/signout") Sign out
             .container
                 .main
                     block content
