--- a/public/asset/css/backend.css
+++ b/public/asset/css/backend.css
@@ -36,3 +36,13 @@ footer {
   .tb-tmpl-thumb img {
     width: 100%;
     height: 100%; }
+
+.tb-tmpl-item {
+  margin-bottom: 30px; }
+  .tb-tmpl-item h3 {
+    text-align: center; }
+  .tb-tmpl-item img {
+    border: 1px solid #e5e5e5;
+    padding: 20px 0;
+    width: 100%;
+    height: 100%; }
