--- a/public/asset/css/backend.scss
+++ b/public/asset/css/backend.scss
@@ -48,3 +48,17 @@ footer {
     height: 100%;
   }
 }
+.tb-tmpl-item {
+  margin-bottom: 30px;
+
+  h3 {
+    text-align: center;
+  }
+
+  img {
+    border: 1px solid #e5e5e5;
+    padding: 20px 0;
+    width: 100%;
+    height: 100%;
+  }
+}
