--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1,5 +1,5 @@
 .tpl-body .navbar, .tpl-body .nav {
-  height: 50px; }
+  height: 59px; }
 .tpl-body .nav > li {
   /*border-left: 1px solid #e5e5e5;*/
   height: 100%; }
@@ -29,9 +29,13 @@ footer {
   margin: 15px 0; }
 
 .tpl-items, .tpl-filter {
-  margin: 49px auto 0 auto;
+  margin: 58px auto 0 auto;
+  padding-top: 20px;
   max-height: 400px;
   border: 1px solid #e5e5e5; }
+  .tpl-items hr, .tpl-filter hr {
+    margin-left: 15px;
+    margin-right: 15px; }
 
 .tpl-item-list {
   list-style-type: none;
