--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -28,17 +28,25 @@ footer {
 .main-content {
   margin: 15px 0; }
 
-.tpl-items, .tpl-filter {
+.tpl-items {
+  border: 1px solid #e5e5e5;
   margin: 58px auto 0 auto;
-  padding-top: 20px;
-  max-height: 400px;
-  border: 1px solid #e5e5e5; }
-  .tpl-items hr, .tpl-filter hr {
-    margin-left: 15px;
-    margin-right: 15px; }
+  padding-bottom: 10px; }
+  .tpl-items .pagination {
+    margin: 0; }
 
 .tpl-item-list {
   list-style-type: none;
   padding-top: 20px; }
-  .tpl-item-list li img {
-    width: 100%; }
+  .tpl-item-list li {
+    margin: 0; }
+    .tpl-item-list li img {
+      width: 100%; }
+
+.tpl-filter {
+  margin: 58px auto 0 auto;
+  padding-top: 20px;
+  border: 1px solid #e5e5e5; }
+  .tpl-filter hr {
+    margin-left: 15px;
+    margin-right: 15px; }
