--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -28,7 +28,11 @@ footer {
 .main-content {
   margin: 15px 0; }
 
+.tpl-tab {
+  z-index: 1000; }
+
 .tpl-items {
+  background: #fff;
   border: 1px solid #e5e5e5;
   margin: 58px auto 0 auto;
   padding-bottom: 10px; }
@@ -37,16 +41,32 @@ footer {
 
 .tpl-item-list {
   list-style-type: none;
-  padding-top: 20px; }
+  padding: 0;
+  margin: 0; }
   .tpl-item-list li {
-    margin: 0; }
+    margin: 0;
+    padding: 15px 0; }
+    .tpl-item-list li h2 {
+      font-size: 20px;
+      margin: 0 0 10px 0;
+      text-align: center; }
     .tpl-item-list li img {
       width: 100%; }
+    .tpl-item-list li.clearfix {
+      padding: 0; }
 
 .tpl-filter {
+  background: #fff;
+  border: 1px solid #e5e5e5;
   margin: 58px auto 0 auto;
-  padding-top: 20px;
-  border: 1px solid #e5e5e5; }
+  padding-top: 20px; }
   .tpl-filter hr {
     margin-left: 15px;
     margin-right: 15px; }
+
+.tpl-frame {
+  position: fixed;
+  top: 58px;
+  left: 0;
+  width: 100%;
+  height: 100%; }
