--- a/public/asset/css/style.scss
+++ b/public/asset/css/style.scss
@@ -43,7 +43,11 @@ footer {
 .main-content {
   margin: 15px 0;
 }
+.tpl-tab {
+  z-index: 1000;
+}
 .tpl-items {
+  background: #fff;
   border: 1px solid #e5e5e5;
   margin: #{$navbarHeight - 1} auto 0 auto;
   padding-bottom: 10px;
@@ -53,23 +57,41 @@ footer {
 }
 .tpl-item-list {
   list-style-type: none;
-  padding-top: 20px;
+  padding: 0;
+  margin: 0;
   li {
     margin: 0;
+    padding: 15px 0;
+    h2 {
+      font-size: 20px;
+      margin: 0 0 10px 0;
+      text-align: center;
+    }
     img {
       width: 100%;
+    }
+    &.clearfix {
+      padding: 0;
     }
   }
 }
 .tpl-filter {
+  background: #fff;
+  border: 1px solid #e5e5e5;
   margin: #{$navbarHeight - 1} auto 0 auto;
   padding-top: 20px;
-  border: 1px solid #e5e5e5;
 
   hr {
     margin-left: 15px;
     margin-right: 15px;
   }
+}
+.tpl-frame {
+  position: fixed;
+  top: #{$navbarHeight - 1};
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .tpl-tag-list {
 
